Modificado el método para obtener por nombre. Añadido el metodo de obtener todos los jugadores.